--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,7 @@
         android:gravity="center"
         android:inputType="number"
         android:hint="0"
+        android:text="0"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/cb_player1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,6 +116,7 @@
         android:gravity="center"
         android:inputType="number"
         android:hint="0"
+        android:text="0"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/cb_player2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +136,7 @@
         android:gravity="center"
         android:inputType="number"
         android:hint="0"
+        android:text="0"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/cb_player3"
         app:layout_constraintEnd_toEndOf="parent"
