--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,38 +53,7 @@
         app:layout_constraintVertical_bias="0.048" />
 
 
-    <!--    <TextView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="28dp"-->
-    <!--        android:layout_marginTop="96dp"-->
-    <!--        android:text="Bet:"-->
-    <!--        android:textColor="#469e59"-->
-    <!--        android:textSize="30dp"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/point2"-->
-    <!--        app:layout_constraintHorizontal_bias="0.9"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/point2"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:background="@drawable/custom_balance_textview"-->
-    <!--        android:gravity="center"-->
-    <!--        android:paddingLeft="40dp"-->
-    <!--        android:paddingTop="5dp"-->
-    <!--        android:paddingRight="40dp"-->
-    <!--        android:paddingBottom="5dp"-->
-    <!--        android:text="200"-->
-    <!--        android:textColor="#469e59"-->
-    <!--        android:textSize="30sp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.893"-->
-    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--        app:layout_constraintRight_toRightOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        app:layout_constraintVertical_bias="0.142" />-->
 
 
     <EditText
@@ -267,6 +236,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.885" />
+
+    <Button
+        android:id="@+id/napcard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
+        android:text="Nhấn để nạp Card"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:visibility="invisible"
+        android:background="@drawable/custom_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.777"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
