--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.626"
         app:srcCompat="@drawable/background_racer_road" />
+
+    <TextView
+        android:id="@+id/recievePoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="0"
+        android:textColor="#107a20"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.763"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/point" />
 
     <TextView
         android:id="@+id/textView"
@@ -42,7 +56,7 @@
         android:paddingTop="5dp"
         android:paddingRight="40dp"
         android:paddingBottom="5dp"
-        android:text="200"
+        android:text="1000"
         android:textColor="#107a20"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -241,14 +255,14 @@
         android:id="@+id/napcard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:text="Nhấn để nạp Card"
+        android:layout_marginTop="152dp"
+        android:background="@drawable/custom_button"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
+        android:text="Nhấn để nạp Card"
         android:visibility="invisible"
-        android:background="@drawable/custom_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.777"
+        app:layout_constraintHorizontal_bias="0.71"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
