--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -212,16 +212,16 @@
 
     <Button
         android:id="@+id/btnStart"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/button"
         android:onClick="playClickButton"
         android:text="Start"
-        android:textColor="#05199e"
-        android:textSize="15dp"
+        android:textColor="#755a4c"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.244"
@@ -231,15 +231,15 @@
 
     <Button
         android:id="@+id/btnRestart"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/button"
         android:text="Restart"
-        android:textColor="#05199e"
-        android:textSize="15dp"
+        android:textColor="#755a4c"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
