--- a/app/src/main/res/layout/layout_dialog_winner.xml
+++ b/app/src/main/res/layout/layout_dialog_winner.xml
@@ -35,6 +35,7 @@
             android:padding="12dp"
             android:gravity="center"
             android:layout_marginTop="10dp"
+            android:textSize="25dp"
 
             />
         <Button
