--- a/app/src/main/res/layout/layout_dialog_winner.xml
+++ b/app/src/main/res/layout/layout_dialog_winner.xml
@@ -13,7 +13,7 @@
         android:gravity="center"
         android:padding="12dp"
         android:text="The WINNER is"
-        android:textColor="@color/black"
+        android:textColor="#08824f"
         android:textSize="20dp" />
 
     <LinearLayout
@@ -36,13 +36,124 @@
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
+            android:textColor="#08824f"
 
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_green_corner_16">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/imgGreen"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    />
+                <TextView
+                    android:id="@+id/txtBet1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20dp"
+                    android:textColor="#08824f"
+                    android:layout_marginLeft="150dp"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/imgYellow"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    />
+                <TextView
+                    android:id="@+id/txtBet2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20dp"
+                    android:textColor="#08824f"
+                    android:layout_marginLeft="150dp"
+
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/imgRed"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    />
+                <TextView
+                    android:id="@+id/txtBet3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20dp"
+                    android:textColor="#08824f"
+                    android:layout_marginLeft="150dp"
+
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/txtSumOfReceive"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="25dp"
+                    android:text="Bet received:"
+                    android:textColor="#08824f"
+
+                    />
+                <TextView
+                    android:id="@+id/sumReceived"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="25dp"
+                    android:textColor="#08824f"
+
+                    />
+            </LinearLayout>
+
+
+        </LinearLayout>
         <Button
             android:id="@+id/btnContinue"
             android:layout_width="175dp"
             android:layout_height="55dp"
             android:text="Continue"
+            android:textColor="#08824f"
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:background="@drawable/button"/>
