--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#8897f7"/>
-    <corners android:radius="10dp"/>
-    <stroke android:color="#05199e" android:width="3dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<stroke
+    android:width="3dp"
+    android:color="#05199e" />
+
+<solid android:color="#8897f7" />
+
+<padding
+    android:left="1dp"
+    android:right="1dp"
+    android:bottom="1dp"
+    android:top="1dp" />
+
+<corners android:radius="10dp" />
 </shape>
